# ooh

./: .gitignore  CMakeLists.txt  build.sh  build_script.sh  ooh.sln  ooh.vcxproj  ooh.vcxproj.filters
inc/: Ooh.h  Ooh_gobj.h  ooh.cpp  ooh.h  ooh_gobj.h
ooh_test/: ooh_test.cpp  ooh_test.vcxproj  ooh_test.vcxproj.filters
ooh_test_exe/: main.cpp  ooh_test_exe.vcxproj
src/: Ooh_linux.cpp  Ooh_windows.cpp  ooh.cpp  ooh_linux.cpp  ooh_windows.cpp
sublime/: build_msvc_ooh_dll.bat  ooh_dll.sublime-build
